Fix:  Photon Stlye's Unselected tab - Remove first visible tab's left border #195

--- a/userChrome.css
+++ b/userChrome.css
@@ -945,9 +945,6 @@
   .tabbrowser-tab::before {
     margin-inline-start: -1px !important;
   }
-  .tabbrowser-tab[first-visible-tab]::before {
-    border-right: var(--tab-divide-line) !important;
-  }
 
   .tabbrowser-tab[first-visible-tab]::before,
   :root[tabsintitlebar]:not([extradragspace]) #toolbar-menubar[autohide="true"] + #TabsToolbar .tabbrowser-tab::after,
